--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
