--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 
-    "start": "nodemon src/index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "nunjucks": "^3.2.2"
   },
 
-  
+
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
