--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 
     "start": "nodemon index.js",
-    "build": "node index.js"
+    "build": ""
   },
   "repository": {
     "type": "git",
