--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "root": "./build",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-
-    "start": "nodemon index.js",
-    "build": ""
+    "start": "node index.js",
+    "pre-deploy": "node deleteLastDeploy.js",
+    "deploy": "npm run pre-deploy && now --public && now alias",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
   },
 
 
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+  "engines": {
+    "node": "12.x"
   }
 }
